--- a/text2img/Dockerfile
+++ b/text2img/Dockerfile
@@ -16,22 +16,40 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY main.py .
+COPY app/ app/
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 
-# Create volume mount points
-VOLUME ["/app/credentials"]
+# Create volume mount points for credentials and logs
+VOLUME ["/app/credentials", "/app/logs"]
 
 # Default command
 ENTRYPOINT ["python3", "main.py"]
 
-# Usage Instructions (in comments):
-# 1. Build: docker build -t text2img .
-# 2. Run: docker run --gpus all \
-#    -v $PWD/credentials:/app/credentials \
-#    -e GOOGLE_APPLICATION_CREDENTIALS=/app/credentials/gcp-key.json \
-#    text2img \
-#    --mongo-uri="mongodb://host.docker.internal:27017/dbname" \
-#    --gcs-bucket="your-bucket-name" \
-#    [--callback-url="http://your-callback-url"]
+# Usage Instructions:
+# 1. Build:
+#    docker build -t text2img .
+#
+# 2. Run with GPU:
+#    docker run --gpus all \
+#      -v $PWD/credentials:/app/credentials \
+#      -v $PWD/logs:/app/logs \
+#      -e GOOGLE_APPLICATION_CREDENTIALS=/app/credentials/gcp-key.json \
+#      text2img \
+#      --mongo-uri="mongodb://host.docker.internal:27017/dbname" \
+#      --gcs-bucket="your-bucket-name" \
+#      --log-file="/app/logs/generation.log" \
+#      [--callback-url="http://your-callback-url"]
+#
+# 3. Run without GPU:
+#    docker run \
+#      -v $PWD/credentials:/app/credentials \
+#      -v $PWD/logs:/app/logs \
+#      -e GOOGLE_APPLICATION_CREDENTIALS=/app/credentials/gcp-key.json \
+#      -e USE_GPU=false \
+#      text2img \
+#      --mongo-uri="mongodb://host.docker.internal:27017/dbname" \
+#      --gcs-bucket="your-bucket-name" \
+#      --log-file="/app/logs/generation.log" \
+#      [--callback-url="http://your-callback-url"]
